[gd_scene load_steps=5 format=3 uid="uid://b6dorvv16pl2h"]

[ext_resource type="Script" path="res://scripts/menu/match_tracker.gd" id="1_ry1xl"]
[ext_resource type="Texture2D" uid="uid://bjwtvh1py7qac" path="res://assets/HUD/tournamentBracket.png" id="2_qwgw3"]

[sub_resource type="LabelSettings" id="LabelSettings_xo8bi"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_mwvox"]
font_size = 51
font_color = Color(0.243137, 0.941176, 0.243137, 1)

[node name="MatchTracker" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ry1xl")

[node name="TournamentBracket" type="Sprite2D" parent="."]
position = Vector2(640, 360.75)
scale = Vector2(0.752941, 0.488475)
texture = ExtResource("2_qwgw3")

[node name="Label1" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 199.0
offset_right = 338.0
offset_bottom = 221.0
label_settings = SubResource("LabelSettings_xo8bi")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 297.0
offset_right = 338.0
offset_bottom = 319.0
label_settings = SubResource("LabelSettings_xo8bi")

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 394.0
offset_right = 338.0
offset_bottom = 416.0
label_settings = SubResource("LabelSettings_xo8bi")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 492.0
offset_right = 337.0
offset_bottom = 514.0
label_settings = SubResource("LabelSettings_xo8bi")

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 342.0
offset_top = 52.0
offset_right = 640.0
offset_bottom = 74.0
label_settings = SubResource("LabelSettings_xo8bi")

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 341.0
offset_top = 247.0
offset_right = 639.0
offset_bottom = 269.0
label_settings = SubResource("LabelSettings_xo8bi")

[node name="Label7" type="Label" parent="."]
layout_mode = 0
offset_left = 342.0
offset_top = 444.0
offset_right = 640.0
offset_bottom = 466.0
label_settings = SubResource("LabelSettings_xo8bi")

[node name="Label8" type="Label" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 638.0
offset_right = 638.0
offset_bottom = 660.0
label_settings = SubResource("LabelSettings_xo8bi")

[node name="Label9" type="Label" parent="."]
layout_mode = 0
offset_left = 643.0
offset_top = 151.0
offset_right = 941.0
offset_bottom = 173.0
label_settings = SubResource("LabelSettings_xo8bi")

[node name="Label10" type="Label" parent="."]
layout_mode = 0
offset_left = 642.0
offset_top = 540.0
offset_right = 940.0
offset_bottom = 562.0
label_settings = SubResource("LabelSettings_xo8bi")

[node name="Label11" type="Label" parent="."]
layout_mode = 0
offset_left = 942.0
offset_top = 346.0
offset_right = 1240.0
offset_bottom = 368.0
label_settings = SubResource("LabelSettings_xo8bi")

[node name="winner" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 943.0
offset_top = 263.0
offset_right = 1241.0
offset_bottom = 302.0
text = "Winner"
label_settings = SubResource("LabelSettings_mwvox")
horizontal_alignment = 1
